--- a/login.html
+++ b/login.html
@@ -87,8 +87,8 @@
 
   <script>
     function login() {
-      const correctUsername = "firas";   
-      const correctPassword = "12345";   
+      const correctUsername = "Rita";   
+      const correctPassword = "33314";   
       const redirectURL = "index.html"; 
 
       const username = document.getElementById("username").value.trim();
