Update and rename login.html to index.html

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     function login() {
       const correctUsername = "Rita";   
       const correctPassword = "33314";   
-      const redirectURL = "index.html"; 
+      const redirectURL = "main.html"; 
 
       const username = document.getElementById("username").value.trim();
       const password = document.getElementById("password").value.trim();
