--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <body>
 
   <div class="login-container">
-    <h2>Welcome Back</h2>
+    <h2>Welcome </h2>
     <input type="text" id="username" placeholder="Username">
     <input type="password" id="password" placeholder="Password">
     <button onclick="login()">Login</button>
